fix: remove the page shift to the left when the scrollbar appears

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -3,7 +3,6 @@
   max-width: 780px;
   padding: 0 15px;
   margin: 0 auto;
-  border: 1px solid red;
 }
 
 .app__content {
